[BUGFIX] renamed local variable

--- a/templates/sudoers.erb
+++ b/templates/sudoers.erb
@@ -1,4 +1,4 @@
 # This file is managed by Puppet
-<% Array(content).each do | keys | -%>
+<% Array(@content).each do | keys | -%>
 <%=   keys %>
 <% end -%>
